loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:4: error: not found: value B
      B=B+1
      ^Poucet1:8: error: not found: value B
  if(B<=2){
     ^