loopdowhile.Poucet1.scala.code
do{
  for(i<- 1 to 5){
    if(estSurBiscuit){
      B=B+1
    }
    avance()
  }
  if(B<=2){
    droite()
  }
  else{
    gauche()
  }
}while(sortieTrouvee)